--- a/html/acceder.html
+++ b/html/acceder.html
@@ -14,38 +14,38 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <!-- Logo -->
-                    <a class="navbar-brand" href="#">
-                        <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
-                    </a>
+             <nav class="navbar navbar-expand-lg sticky-top">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
+                </a>
 
-                    <!-- Botón de colapso móvil -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <!-- Botón de colapso móvil -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <!-- Menú -->
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Botones -->
-                    <div class="d-flex align-items-center">
-                        <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
-                        <button class="btn btn-consulta">Consulta Gratuita</button>
-                    </div>
+                <!-- Menú -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../html/inicio.html">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/sobreNosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/contactanos.html">CONTACTO</a></li>
+                    </ul>
                 </div>
-            </nav>
+
+                <!-- Botones -->
+                <div class="d-flex align-items-center">
+                    <a class="btn btn-acceder d-flex align-items-center" href="../html/acceder.html"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                    <a class="btn btn-consulta" href="../html/presupuesto.html">Consulta Gratuita</a>
+                </div>
+            </div>
+        </nav>
         </header>
-        <main style=" background-image: url(../images/acceder/image\ 5.png); width: 100%; height: 100%; padding: 12%; background-size: cover;">
+        <main class="d-flex justify-content-center" style=" background-image: url(../images/acceder/image\ 5.png); width: 100%; height: 100%; padding: 12%; background-size: cover;">
             <div class="card text-center" style="width: 50%;">
                 <div class="card-body">
                     <h1 style="color: rgb(138, 216, 134);">
@@ -54,22 +54,63 @@
                     <h3>
                         Energia solar para un planeta mas verde
                     </h3>
-                    <form>
+                    <form class="d-flex flex-column justify-content-center align-items-center">
                         <div class="mb-3" style="width: 50%;">
-                            <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+                            <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3" style="width: 50%;">
-                            <label for="exampleInputPassword1" class="form-label">Contrasenya</label>
+                            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                             <input type="password" class="form-control" id="exampleInputPassword1">
                         </div>
-                        <button type="submit" class="btn btn-primary">ACCEDER</button>
+                        <button type="submit" class="btn btn-success" style="color: black;">ENVIAR</button>
                     </form>
                 </div>
             </div>
         </main>
-        <footer>
-
+         <footer>
+            <div class="footer1">
+                <div class="logo-footer">
+                    <img src="../images/inicio/logo.png">
+                </div>
+                <p>Especialistas en energía solar fotovoltaica. Contribuyendo a un futuro más sostenible desde 2021.</p>
+            </div>
+            <div class="footer2">
+                <h1>Contacto</h1>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Madrid: Calle Núñez de Balboa, 120</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Sevilla: Parque Cartuja, Isaac Newton 4</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/call_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>912 345 678 / 611 234 567</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/mail_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>info@ecovolt.es</p>
+                </div>
+            </div>
+            <div class="footer3">
+                <h1>Servicios</h1>
+                <a href="">Particulares</a>
+                <a href="">Comunidad de vecinos</a>
+                <a href="">Empresas</a>
+                <a href="">Consulta gratuita</a>
+            </div>
         </footer>
     </body>
+    <script>
+    window.addEventListener("scroll", function () {
+        const navbar = document.querySelector("nav.navbar");
+        if (window.scrollY > 50) {
+        navbar.classList.add("navbar-scrolled");
+        } else {
+        navbar.classList.remove("navbar-scrolled");
+        }
+    });
+    </script>
 </html>
