--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/presupuesto.css">
+        <link rel="stylesheet" href="../css/contactanos.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,36 +14,36 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <!-- Logo -->
-                    <a class="navbar-brand" href="#">
-                        <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
-                    </a>
+             <nav class="navbar navbar-expand-lg sticky-top">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
+                </a>
 
-                    <!-- Botón de colapso móvil -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <!-- Botón de colapso móvil -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <!-- Menú -->
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Botones -->
-                    <div class="d-flex align-items-center">
-                        <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
-                        <button class="btn btn-consulta">Consulta Gratuita</button>
-                    </div>
+                <!-- Menú -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../html/inicio.html">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/sobreNosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/contactanos.html">CONTACTO</a></li>
+                    </ul>
                 </div>
-            </nav>
+
+                <!-- Botones -->
+                <div class="d-flex align-items-center">
+                    <a class="btn btn-acceder d-flex align-items-center" href="../html/acceder.html"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                    <a class="btn btn-consulta" href="../html/presupuesto.html">Consulta Gratuita</a>
+                </div>
+            </div>
+        </nav>
         </header>
         <main>
             <div class="d-flex align-items-center justify-content-center flex-column mt-5">
@@ -51,7 +51,7 @@
                     CONTACTAR
                 </h1>
             </div>
-            <div class="d-flex align-items-top justify-content-center mt-5" style="flex-wrap: wrap;">
+            <div class="d-flex align-items-top justify-content-center mt-5 mb-5" style="flex-wrap: wrap;">
                 <div >
                     <div class="d-flex flex-column me-5">
                         <div class="d-flex align-items-center">
@@ -106,8 +106,49 @@
                 </div>
             </div>
         </main>
-        <footer>
-            
+         <footer>
+            <div class="footer1">
+                <div class="logo-footer">
+                    <img src="../images/inicio/logo.png">
+                </div>
+                <p>Especialistas en energía solar fotovoltaica. Contribuyendo a un futuro más sostenible desde 2021.</p>
+            </div>
+            <div class="footer2">
+                <h1>Contacto</h1>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Madrid: Calle Núñez de Balboa, 120</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Sevilla: Parque Cartuja, Isaac Newton 4</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/call_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>912 345 678 / 611 234 567</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/mail_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>info@ecovolt.es</p>
+                </div>
+            </div>
+            <div class="footer3">
+                <h1>Servicios</h1>
+                <a href="">Particulares</a>
+                <a href="">Comunidad de vecinos</a>
+                <a href="">Empresas</a>
+                <a href="">Consulta gratuita</a>
+            </div>
         </footer>
     </body>
+    <script>
+    window.addEventListener("scroll", function () {
+        const navbar = document.querySelector("nav.navbar");
+        if (window.scrollY > 50) {
+        navbar.classList.add("navbar-scrolled");
+        } else {
+        navbar.classList.remove("navbar-scrolled");
+        }
+    });
+    </script>
 </html>
