--- a/html/empresas.html
+++ b/html/empresas.html
@@ -29,17 +29,17 @@
                 <!-- Menú -->
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/inicio.html">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/sobreNosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/contactanos.html">CONTACTO</a></li>
                     </ul>
                 </div>
 
                 <!-- Botones -->
                 <div class="d-flex align-items-center">
-                    <a class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
-                    <a class="btn btn-consulta">Consulta Gratuita</a>
+                    <a class="btn btn-acceder d-flex align-items-center" href="../html/acceder.html"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                    <a class="btn btn-consulta" href="../html/presupuesto.html">Consulta Gratuita</a>
                 </div>
             </div>
         </nav>
