--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,54 +1,106 @@
 <!DOCTYPE html>
 <html lang="es-ES">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/servicios.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Kreon:wght@300;400;500;600;700&family=League+Spartan:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.cdnfonts.com/css/league-gothic" rel="stylesheet">
-        <title>Ecovolt</title>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <!-- Logo -->
-                    <a class="navbar-brand" href="#">
-                        <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
-                    </a>
 
-                    <!-- Botón de colapso móvil -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/servicios.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Electrolize&family=Kreon:wght@300;400;500;600;700&family=League+Spartan:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/league-gothic" rel="stylesheet">
+    <title>Ecovolt</title>
+</head>
 
-                    <!-- Menú -->
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
-                        </ul>
-                    </div>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
+                </a>
 
-                    <!-- Botones -->
-                    <div class="d-flex align-items-center">
-                        <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
-                        <button class="btn btn-consulta">Consulta Gratuita</button>
-                    </div>
+                <!-- Botón de colapso móvil -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Menú -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../html/inicio.html">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/sobreNosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/contactanos.html">CONTACTO</a></li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
-        <main>
-            <div >
 
+                <!-- Botones -->
+                <div class="d-flex align-items-center">
+                    <a class="btn btn-acceder d-flex align-items-center" href="../html/acceder.html"><i
+                            class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                    <a class="btn btn-consulta" href="../html/presupuesto.html">Consulta Gratuita</a>
+                </div>
             </div>
-        </main>
-    </body>
+        </nav>
+    </header>
+    <main>
+        <div class="d-flex align-items-center justify-content-center"
+            style="background-image: url(../images/servicios/image\ 18.png);  width: 100%; height: 100%; padding: 12%; background-size: cover; gap:5%;">
+            <div class="card text-center" style="width: 50%; height: 300px; ">
+                <div class="card-body">
+                    <img src="../images/servicios/image 6.png"alt="">
+                    <h3>    
+                        Particulares
+                    </h3>
+                   <p>
+                    Energía solar en tu hogar: ahorra, controla y cuida del planeta.
+                   </p>
+                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                </div>
+            </div>
+            <div class="card text-center" style="width: 50%; height: 300px;">
+                <div class="card-body">
+                    <img src="../images/servicios/image 7.png"alt="">
+                    <h3>    
+                        Comunidad de vecinos
+                    </h3>
+                   <p>
+                    Comparte energía limpia en tu comunidad y reduce el gasto eléctrico común.
+                   </p>
+                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                </div>
+            </div>
+            <div class="card text-center" style="width: 50%;  height: 300px;">
+                <div class="card-body">
+                    <img src="../images/servicios/4aceb19a-2da3-45c3-a3e4-0249283fd06b 1.png"alt="">
+                    <h3>    
+                        Empresas
+                    </h3>
+                   <p>
+                    Reduce costes energéticos y mejora la sostenibilidad de tu empresa con energía solar
+                   </p>
+                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+<script>
+    window.addEventListener("scroll", function () {
+        const navbar = document.querySelector("nav.navbar");
+        if (window.scrollY > 50) {
+        navbar.classList.add("navbar-scrolled");
+        } else {
+        navbar.classList.remove("navbar-scrolled");
+        }
+    });
+    </script>
 </html>
